# linux_apps_opensource

./: .gitignore  CMakeLists.txt  README.md  cmake_config  install  linux_apps_opensrc_github.tar  rw101_config
application/rolling_config_service/: CMakeLists.txt
application/rolling_config_service/src/: rolling_config_main.c
application/rolling_flash_service/: CMakeLists.txt  rolling_flash_common.h  rolling_flash_main.c  rolling_flash_prepare.h  rolling_flash_recovery.h  rolling_flash_signal.h
application/rolling_helper_service/: CMakeLists.txt
application/rolling_helper_service/common/: CMakeLists.txt  common_base_func.h  rolling_helper_adapter.h
application/rolling_ma_service/: CMakeLists.txt  libmodemauth.so.1.0  rolling_ma
binary_deb/: linux-apps-qualcomm-rw101-lenovo_2.0.28_amd64.deb  linux-apps-qualcomm-rw101-lenovo_2.0.29_amd64.deb
binary_deb/common_lib/: common_base_func.h  rolling-helper-gdbus-generated.h  rolling_flash_common.h
script/: make_deb.sh  postinst
